# swugenerator

./: README.md  README.rst  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py
swugenerator/: SWUFile.py  SWUSign.py  __about__.py  artifact.py  generator.py  main.py  signer.py  swu_file.py  swu_sign.py
tests/: test_cpio.py  test_integration.py  test_main.py
tests/test_data/integration_input/: config  enc-sw-description.in  private.pem  sw-description  sw-description.in
tests/test_data/integration_output/: output.swu  output.swu.enc  signed_output.swu  signed_output.swu.enc
